test/logs.txt
In file included from ../set_tests/compare class.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:247:43: error: no matching function for call to object of type 'std::__1::greater<int>'
            _node* node = this->find(key, _comp());
                                          ^~~~~
../set_tests/compare class.cpp:63:9: note: in instantiation of member function 'ft::set<int, std::__1::greater<int>, std::__1::allocator<int> >::erase' requested here
    st1.erase(41);
        ^
../set_tests/compare class.cpp:106:67: note: in instantiation of function template specialization 'comparator_test<int>' requested here
    exit(run_set_unit_test<int>("compare class", comparator_test, comparator_test));
                                                                  ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/functional:741:10: note: candidate function not viable: requires 2 arguments, but 0 were provided
    bool operator()(const _Tp& __x, const _Tp& __y) const
         ^
In file included from ../set_tests/compare class.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:251:50: error: no matching function for call to object of type 'std::__1::greater<int>'
            return (!this->isNul(this->find(key, _comp()))) ? 1 : 0;;
                                                 ^~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/functional:741:10: note: candidate function not viable: requires 2 arguments, but 0 were provided
    bool operator()(const _Tp& __x, const _Tp& __y) const
         ^
2 errors generated.
